--- a/styles/index.css
+++ b/styles/index.css
@@ -34,6 +34,11 @@ body > div {
     min-height: 100vh;
 }
 
+body > div > div {
+    width: 100%;
+    min-height: 100vh;
+}
+
 footer {
     top: 100vh
 }
